# launch_reentry_emissions

./: .gitignore  .pre-commit-config.yaml  README.md  codespell_ignore_words.txt  pyproject.toml  requirements.txt  ruff.toml
launch_reentry_emissions/: __init__.py
launch_reentry_emissions/rocket_emissions/: __init__.py
launch_reentry_emissions/rocket_emissions/plume_postcombustion/: __init__.py  plume_emission_index.py  plume_postcombustion.py
tests/rocket_emissions/plume_postcombustion/: test_plume_emission_index.py  test_plume_postcombustion.py
tests/rocket_emissions/plume_postcombustion/data/: generic_kerolox_rocket.csv
