[tool.poetry]
name = "launch_reentry_emissions"
version = "0.1.0"
description = "Package for estimating emissions from a rocket plume and from the aeroheating during high speed re-entries of a space vehicle."
authors = ["Guillermo Joaquin Dominguez Calabuig <guilledcalabuig@gmail.com>"]
license = "{file = \"LICENSE\"}"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<=4"
numpy = "^2.0.0"
pandas = "^2.2.3"
scipy = "^1.14.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"


[tool.poetry.group.apps.dependencies]
matplotlib = "^3.9.2"





[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
pre-commit = "^4.0.1"
debugpy = "^1.8.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
skip = '*.lock'
ignore-words = 'codespell_ignore_words.txt'
