[tool.poetry]
name = "launch_reentry_emissions"
version = "0.1.0"
description = "Package for estimating emissions from a rocket plume and from the aeroheating during high speed re-entries of a space vehicle."
authors = ["Guillermo Joaquin Dominguez Calabuig <guilledcalabuig@gmail.com>"]
license = "{file = \"LICENSE\"}"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<=4"
numpy = ">1.0.0"
pandas = "^2.2.3"
scipy = "^1.14.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-mypy-plugins = "^3.1.2"


[tool.poetry.group.apps.dependencies]
matplotlib = "^3.9.2"





[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
pre-commit = "^4.0.1"
debugpy = "^1.8.7"
mypy = "^1.13.0"
pydocstyle = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
skip = '*.lock'
ignore-words = 'codespell_ignore_words.txt'

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Specify the files and directories to check
files = ["launch_reentry_emissions", "tests"]

# Disallow untyped function definitions
disallow_untyped_defs = true

# Disallow untyped calls
disallow_untyped_calls = true

# Disallow untyped decorated functions
disallow_untyped_decorators = false

# Disallow usage of Any type
disallow_any_explicit = true

# Enable strict optional checking
strict_optional = true

# Show error codes in output
show_error_codes = true

# Warn about unused ignores
warn_unused_ignores = true

# Warn about unreachable code
warn_unreachable = true

# Warn about unused configurations
warn_unused_configs = true

[tool.mypy-pytest]
ignore_missing_imports = true
# Disallow untyped decorated functions
disallow_untyped_decorators = false
